# this-week-in-neovim.org

./: .gitignore  Cargo.toml  Dockerfile  README.md
back/: Cargo.toml  config-dev.toml  config.toml
back/src/: api.rs  cache.rs  config.rs  html_cache.rs  html_wrapper.html  html_wrapper.rs  main.rs  news.rs  routes.rs  rss.rs
back/src/routes/: all.html  all.rs  home.html  home.rs  home_listing.html  next_date.html  not_found.html  not_found.rs  prev_date.html  rss.rs  week.html  week.rs
back/tests/: date.rs
front/: Cargo.toml  Trunk.toml  index.html  style.css
front/src/: components.rs  config.rs  main.rs  router.rs
front/src/components/: home.rs  latest.rs  not_found.rs  week.rs
run/: twin-refresh  twin-refresh.service  twin-refresh.timer
src/: config.rs  main.rs  router.rs
src/components/: home.rs
static/: style.css
twin/: Cargo.toml
twin/src/: lib.rs  news.rs
