[package]
name = "this-week-in-neovim-backend"
version = "0.4.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Official webapp for this-week-in-neovim.org."
keywords = ["neovim", "this-week-in-neovim"]
homepage = "https://this-week-in-neovim.org"
repository = "https://github.com/phaazon/this-week-in-neovim.org"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
chrono = "0.4.19"
log = "0.4.17"
notify = "4.0.17"
pulldown-cmark = "0.9.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rss = "2"
serde = "1"
toml = "0.5.9"
twin = { version = "0.1", path = "../twin" }
