[package]
name = "this-week-in-neovim-frontend"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Official webapp for this-week-in-neovim.org."
keywords = ["neovim", "this-week-in-neovim"]
homepage = "https://this-week-in-neovim.org"
repository = "https://github.com/phaazon/this-week-in-neovim.org"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
chrono = { version = "0.4.19", features = ["wasmbind"] }
log = "0.4.17"
serde = "1"
toml = "0.5.9"
yew = "0.19.3"
yew-router = "0.16.0"
wasm-logger = "0.2.0"
