[package]
name = "twin"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Official webapp for this-week-in-neovim.org."
keywords = ["neovim", "this-week-in-neovim"]
homepage = "https://this-week-in-neovim.org"
repository = "https://github.com/phaazon/this-week-in-neovim.org"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
chrono = "0.4.19"
log = "0.4.17"
pulldown-cmark = "0.9.1"
serde = { version = "1", features = ["derive"] }
